--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ Imports:
   stats,
   dplyr,
   ggplot2
+URL: https://github.com/brandanrosa/MATH5773ROSAlab8
+BugReports: https://github.com/brandanrosa/MATH5773ROSAlab8/issues
