--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Imports:
   ggplot2
 URL: https://github.com/brandanrosa/MATH5773ROSAlab8
 BugReports: https://github.com/brandanrosa/MATH5773ROSAlab8/issues
+Depends: 
+    R (>= 2.10)
