--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
 Imports:
-  magrittr,
   stats,
-  ggplot2
+  ggplot2,
+  shiny
 URL: https://github.com/brandanrosa/MATH5773ROSAlab8
 BugReports: https://github.com/brandanrosa/MATH5773ROSAlab8/issues
 Depends: 
     R (>= 2.10)
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
